--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "axios": "^1.9.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
