--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.5.3",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.17"
   },
   "devDependencies": {
