--- a/web/package.json
+++ b/web/package.json
@@ -16,11 +16,13 @@
     "@mui/styled-engine-sc": "^7.0.2",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.9.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.5.3",
     "redux": "^5.0.1",
     "styled-components": "^6.1.17"
